--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,4 +25,8 @@ serde_json = "1"
 chrono = "0.4.41"
 uuid = { version = "1.17", features = ["v4"] }
 partial_derive = "0.1.0"
+tokio = { version = "1.0", features = ["full"] }
 
+[features]
+default = ["custom-protocol"]
+custom-protocol = ["tauri/custom-protocol"]
