--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,10 +22,12 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-chrono = "0.4.41"
+chrono = { version = "0.4.41", features = ["serde"] }
 uuid = { version = "1.17", features = ["v4"] }
 partial_derive = "0.1.0"
 tokio = { version = "1.0", features = ["full"] }
+dirs = "6.0.0"
+tempfile = "3.20.0"
 
 [features]
 default = ["custom-protocol"]
