--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cargo": "^0.8.0",
     "lucide-react": "^0.525.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.11",
